Fixed scrollbars

--- a/src/ui/main/_colors.scss
+++ b/src/ui/main/_colors.scss
@@ -3,16 +3,13 @@
 /* Background colors */
 $shared-blue1: #004f90;
 $shared-grey170: #292827;
+
 $bg-grey160: #252423;
 $bg-main: #201f1e;
 $bg-content: #31302e;
 
 $code-bg: #3b3a39;
 
-$bg-700: #1c2f32;
-$bg-600: #264955;
-$bg-500: #304a56;
-$bg-400: #3b5969;
-
 /* Foreground colors */
 $text-400: whitesmoke;
+$text-selected: #106EBE;
