--- a/src/ui/main/main.scss
+++ b/src/ui/main/main.scss
@@ -6,16 +6,17 @@
   height: 10px;
 
   &-track {
-    background: $bg-700;
+    background: $bg-main;
   }
 
   &-thumb {
-    background: $bg-400;
+    background: $bg-content;
+    border-radius: 10px;
   }
 }
 
 ::selection {
-  background: $bg-600;
+  background: $text-selected;
 }
 
 body {
@@ -50,23 +51,12 @@ a {
   color: inherit;
   text-decoration: none;
 
-  &:focus {
-    outline: 0;
-  }
-
   &:not(.sonikalize-proj-btn) {
     text-decoration: underline dotted;
 
     &:hover {
       text-decoration: underline;
       transition: underline 0.3s ease-in-out;
-    }
-
-    &:focus {
-      padding: 2px;
-      margin: 2px 0;
-      border-radius: 4px;
-      box-shadow: 0 0 0 4px $bg-700;
     }
   }
 }
