--- a/src/ui/modules/readme/_hljs.scss
+++ b/src/ui/modules/readme/_hljs.scss
@@ -16,11 +16,11 @@ code.hljs {
 
 
     &-track {
-      background: $bg-400;
+      background: $bg-main;
     }
 
     &-thumb {
-      background: $bg-700;
+      background: $bg-content;
       border-radius: 10px;
     }
   }
